Fixes bootstrap navbar collapse (added specific scripts to index)

--- a/src/components/view-recipe/view-recipes.scss
+++ b/src/components/view-recipe/view-recipes.scss
@@ -48,8 +48,8 @@
     top: 22%;
     left: 50%;
     margin: -175px 0 0 -330px;
-    color: #fff;
-    font-size: 18px;
+    color: #000;
+    font-size: 16px;
 }
 
 
